Adding code-mirror to docs demo page

--- a/docs/package.json
+++ b/docs/package.json
@@ -16,8 +16,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
     "draft-js": "^0.10.1",
-    "draftjs-to-html": "file:../../draftjs-to-html",
-    "draftjs-to-markdown": "file:../../draftjs-to-markdown",
+    "draftjs-to-html": "^0.7.4",
+    "draftjs-to-markdown": "^0.4.3",
     "eslint": "^4.1.1",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "2.6.1",
@@ -34,7 +34,6 @@
     "precss": "^2.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-draft-wysiwyg": "file:../",
     "react-router": "^4.1.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
